recursion.logo.lessons.recursion.logo.square.FourSquare.scala.error
FourSquare:11: error: illegal start of simple pattern
  for(var i = 0 : 3){   
      ^FourSquare:16: error: '<-' expected but '}' found.
} 
^