recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  
  carre();
}


def carre(){
  var double = 100;
  var angle = 90;
  
  for(var i = 0 : 3){   
  	forward(double);
  	right(angle);
  }
  
}